@@ -1,3 +1,10 @@
+Wed Aug 08 03:13:10 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py: Add "matches_human_readable_estimate"
+	  to search results - returns an estimate of the number of matching
+	  documents, rounded according to how tight the upper and lower
+	  bounds are.
+
 Sat Aug 04 08:16:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection.py: Add convenience methods for checking
